--- a/Roamni/Main.storyboard
+++ b/Roamni/Main.storyboard
@@ -12,6 +12,35 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--User Porfile-->
+        <scene sceneID="s1A-hW-hpm">
+            <objects>
+                <viewController id="fSe-V9-PJ7" customClass="UserProfileViewController" customModule="Roamni" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="z8n-x4-svv"/>
+                        <viewControllerLayoutGuide type="bottom" id="w3l-Ui-spo"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Rn0-sg-FMv">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <toolbarItems>
+                        <barButtonItem title="Item" id="k5o-DA-Lfr"/>
+                    </toolbarItems>
+                    <navigationItem key="navigationItem" title="User Porfile" id="fQC-KJ-bvZ">
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="60M-Nd-xVX">
+                            <connections>
+                                <action selector="back:" destination="fSe-V9-PJ7" id="ZnL-4S-q2s"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bsw-A4-lBH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1339" y="1110"/>
+        </scene>
         <!--Tour Detail-->
         <scene sceneID="76C-AN-Ape">
             <objects>
@@ -195,7 +224,7 @@
                                             <color key="titleColor" red="0.13546365499999999" green="0.54978889230000005" blue="0.99413257840000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
-                                            <segue destination="AYC-fB-CAF" kind="show" id="ezM-It-TfJ"/>
+                                            <segue destination="5g4-aq-gZt" kind="show" id="nxy-d6-NrR"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lif-PK-nYD">
@@ -284,7 +313,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fa0-wI-kDU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-973.91304347826099" y="1142.9347826086957"/>
+            <point key="canvasLocation" x="-666.66666666666674" y="1142.9347826086957"/>
         </scene>
         <!--Reviews-->
         <scene sceneID="EWt-cU-aaU">
@@ -324,7 +353,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dBS-MQ-qVH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1552" y="607"/>
+            <point key="canvasLocation" x="2131.8840579710145" y="790.76086956521749"/>
         </scene>
         <!--Sign in-->
         <scene sceneID="l8m-L9-8EQ">
@@ -601,7 +630,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="24K-t5-kZW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2550.7246376811595" y="1251.358695652174"/>
+            <point key="canvasLocation" x="2857.971014492754" y="1251.358695652174"/>
         </scene>
         <!--Roamni Terms of Service-->
         <scene sceneID="Cqb-dc-Msa">
@@ -719,7 +748,7 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4hb-pD-9At" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3252.1739130434785" y="1555.4347826086957"/>
+            <point key="canvasLocation" x="3559.420289855073" y="1555.4347826086957"/>
         </scene>
         <!--My Roamni Log View Controller-->
         <scene sceneID="WXi-I1-Upf">
@@ -799,7 +828,7 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EDo-CJ-Tzh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3871" y="-5724"/>
+            <point key="canvasLocation" x="-3959" y="-5631"/>
         </scene>
         <!--Test View Controller-->
         <scene sceneID="SSq-oA-ScI">
@@ -1994,7 +2023,7 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZEn-jH-cQq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3713.04347826087" y="790.76086956521749"/>
+            <point key="canvasLocation" x="4020.289855072464" y="790.76086956521749"/>
         </scene>
         <!--Incoming Tours-->
         <scene sceneID="hdM-Xt-RUm">
@@ -2035,7 +2064,7 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UHy-c2-6Vp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4791.304347826087" y="532.33695652173913"/>
+            <point key="canvasLocation" x="5097.1014492753629" y="532.33695652173913"/>
         </scene>
         <!--My Roamni Incoming Request Detail-->
         <scene sceneID="0nN-3o-6mo">
@@ -2142,7 +2171,7 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="522-wo-OVU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5078.2608695652179" y="1182.8804347826087"/>
+            <point key="canvasLocation" x="5385.507246376812" y="1182.8804347826087"/>
         </scene>
         <!--Roamni Terms of Service-->
         <scene sceneID="QEA-BG-XXn">
@@ -2244,7 +2273,7 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lQs-yF-ec3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4123.188405797102" y="1623.913043478261"/>
+            <point key="canvasLocation" x="4430.434782608696" y="1623.913043478261"/>
         </scene>
         <!--Request A Tour-->
         <scene sceneID="dgz-2J-u2f">
@@ -2879,7 +2908,7 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="089-c0-A6e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2260" y="-5941.0794602698652"/>
+            <point key="canvasLocation" x="-2132" y="-6035"/>
         </scene>
         <!--Choose a Mode-->
         <scene sceneID="vfH-62-ac1">
@@ -2971,7 +3000,7 @@ These Terms of Service, and any rights and licenses granted hereunder, may not b
                 <placeholder placeholderIdentifier="IBFirstResponder" id="amM-bj-83h" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="P8w-nd-94H" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2506" y="-3881"/>
+            <point key="canvasLocation" x="2465" y="-3130"/>
         </scene>
         <!--Choose A Category-->
         <scene sceneID="a7Y-cb-Unc">
@@ -4690,7 +4719,7 @@ Download the Roamni app today to make a tour or take a tour.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pod-Qd-EWg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2400" y="694.56521739130437"/>
+            <point key="canvasLocation" x="2705.7971014492755" y="694.56521739130437"/>
         </scene>
         <!--My Tours-->
         <scene sceneID="0e8-1A-2I3">
@@ -5281,7 +5310,7 @@ Download the Roamni app today to make a tour or take a tour.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="puN-vQ-5wD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-435" y="2019"/>
+            <point key="canvasLocation" x="-639" y="2040"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="TR5-j8-Z23">
@@ -5300,7 +5329,7 @@ Download the Roamni app today to make a tour or take a tour.</string>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IuC-B9-BxQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="868" y="607"/>
+            <point key="canvasLocation" x="1173.913043478261" y="606.52173913043487"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="xBn-wU-yhH">
@@ -5319,7 +5348,7 @@ Download the Roamni app today to make a tour or take a tour.</string>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N0A-eL-KEZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="141" y="1502"/>
+            <point key="canvasLocation" x="447.82608695652175" y="1501.6304347826087"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Nxh-Iq-de1">
@@ -5339,6 +5368,25 @@ Download the Roamni app today to make a tour or take a tour.</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fz7-PA-vIC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1305" y="-5547"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="wL4-VS-wat">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5g4-aq-gZt" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="ysz-u0-YkQ"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="0xq-BD-lIB">
+                        <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="fSe-V9-PJ7" kind="relationship" relationship="rootViewController" id="qC8-RW-LXs"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xCO-aa-tzo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2057" y="1110"/>
         </scene>
     </scenes>
     <resources>
@@ -5385,7 +5433,7 @@ Download the Roamni app today to make a tour or take a tour.</string>
         <image name="version" width="512" height="512"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="A5s-8r-R9O"/>
+        <segue reference="urI-Ek-Oge"/>
         <segue reference="s2S-wb-XYy"/>
         <segue reference="aGK-Qo-5oV"/>
         <segue reference="2hD-WS-x4K"/>
